--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
 h1 {text-align: center; margin: 30xp 0;}
 
-div {
+.row {
   display: flex;
-  justify-content: start;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 30px 0;
 }
+.container {
+  margin: 0 20px;
+}
+
 table,th,td{
   border: 1px solid dodgerblue;
   border-collapse: collapse;
@@ -25,4 +29,11 @@ button {
   border: 0;
   font-size: 18px;
   font-weight: 400;
+}
+.button, .upload {
+  display: flex;
+  justify-content: center;
+}
+button, input {
+  margin: 30px 0;
 }
