--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 h1 {text-align: center; margin: 30xp 0;}
 
 .row {
@@ -27,13 +31,61 @@ button {
   cursor: pointer;
   letter-spacing: 1px;
   border: 0;
-  font-size: 18px;
+  height: 2.5rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 .button, .upload {
   display: flex;
   justify-content: center;
-}
-button, input {
   margin: 30px 0;
+
+}
+
+[for="upload"] {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  height: 2.5rem;
+}
+[type="file"] {
+  min-width: 14rem;
+  margin: 0;
+  opacity: 0;
+}
+.file-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 5;
+  height: 2.5rem;
+  padding: .5rem 1rem;
+  line-height: 1.5;
+  color: #555;
+  background-color: #fff;
+  border: .075rem solid dodgerblue;
+  border-radius: .25rem;
+  box-shadow: inset 0 .2rem .4rem rgba(18, 253, 241, 0.05);
+  user-select: none;
+}
+.file-input::before {
+  position: absolute;
+  top: -.075rem;
+  right: -.075rem;
+  bottom: -.075rem;
+  z-index: 6;
+  display: block;
+  content: "Browse";
+  height: 2.5rem;
+  padding: .5rem 1rem;
+  line-height: 1.5;
+  color: #fff;
+  background-color: dodgerblue;
+  border: .075rem solid #ddd;
+  border-radius: 0 .25rem .25rem 0;
+}
+
+#uploadBtn {
+  margin: 0 10px;
 }
